part1/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-project-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-project
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 3000
