part1/project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 1234
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dwk-project-svc
                port:
                  number: 1234
